style.css
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

:root {
  --background-color: rgb(255, 255, 255);
  --accent-color: rgb(37, 164, 202);
  --accent-font-color: rgb(255, 255, 255);
  --font-color-bold: rgb(0, 0, 0);
  --font-color: rgb(75, 75, 75);
  --window-padding: max(3rem, 3svw);
}

* {
  margin: 0;
  padding: 0;
  font: inherit;
}

body {
  color: var(--font-color);
  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

h1,
h2,
h3 {
  font-family: "Playfair Display";
  color: var(--font-color-bold);
}

picture img {
  vertical-align: bottom;
}

/* Hero */

.hero-content {
  background-color: transparent;
  padding: var(--window-padding);
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

.hero::before {
  /* diagonal splash */
  content: "";
  display: block;
  position: absolute;
  background-color: var(--accent-color);
  width: 100%;
  height: max(100svw, 60svh);
  transform: skewY(-13deg) translateY(-65%);
}

.hero::before,
.hero-content > *,
.project {
  box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.46);
}

.name-portrait-container {
  max-width: max-content;
  position: relative;
  z-index: 2;
}

.hero-portrait {
  width: max(275px, 33svw);
  max-width: calc(100svw - calc(var(--window-padding) * 2));
  object-fit: cover;
}

.name {
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 0 0.2em;
  font-size: max(38px, 4.5svw);
  color: rgb(255, 255, 255);
  text-shadow: -2px -2px 5px rgb(0, 0, 0);
}

.about {
  flex: 1;
  align-self: stretch;
  margin: 5% 0;
  background-color: var(--background-color);
  padding: 1.5rem;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  gap: 1rem;
  z-index: 1;
}

.about-header {
  flex: 1;
  font-size: max(1.75rem, 3svw);
  font-weight: 500;
  display: flex;
  align-items: flex-end;
}

.about-content {
  flex: 3;
  line-height: max(1.25rem, 2.5svw);
  font-size: max(1rem, 1.5svw);
}

.about-links {
  flex: 1;
  align-self: flex-end;
  justify-self: flex-end;
  display: flex;
  align-items: flex-end;
}

.about-links img {
  height: max(2rem, 3svw);
  padding: 0 1svw;
}

/* Projects */

.project-list {
  --proj-img-width: clamp(275px, 25svw, 750px);
  --project-header-font-size: clamp(1.25rem, 2svw, 3.75rem);
  margin: 0 auto;
  padding: 0 var(--window-padding);
  display: grid;
  grid-template-columns: repeat(auto-fit, var(--proj-img-width));
  place-content: center;
  gap: 2rem;
}

.project-list-header {
  font-size: max(1.75rem, 3svw);
  font-weight: 500;
  grid-column-start: 1;
  grid-column-end: -1;
  margin-bottom: calc(var(--project-header-font-size) * -0.75);
}

.project {
  margin-bottom: 1rem;
}

.project-img {
  width: var(--proj-img-width);
}

.project-info {
  --small-padding: calc(var(--project-header-font-size) / 2.25);
  display: grid;
  grid-template-columns: auto 1fr;
  gap: var(--small-padding);
  padding: var(--project-header-font-size);
  padding-top: var(--small-padding);
  max-height: 18svh;
  overflow: auto;
}

.project-name {
  font-size: var(--project-header-font-size);
}

.project-links {
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
}

.project-links img {
  height: var(--project-header-font-size);
  padding: 0 0.5svw;
}

.project-description {
  grid-column: span 2;
  font-size: calc(var(--project-header-font-size) / 1.75);
}

/* Contacts */

